...
    }

    private static func signalPath(for environmentKey: String) throws -> String {
        let environment = ProcessInfo.processInfo.environment
        guard let path = environment[environmentKey],
              !path.isEmpty,
              let processTemporaryPath = environment["TMPDIR"],
              !processTemporaryPath.isEmpty
        else {
            throw ConfigurationError()
        }
        return try validatedSignalURL(
            path: path,
...
